--- a/app/assets/stylesheets/components/cards/card_generic.scss
+++ b/app/assets/stylesheets/components/cards/card_generic.scss
@@ -1,13 +1,20 @@
 .card-generic {
   width: 100%;
   position: relative;
-  box-shadow: 2px 5px 6px 5px rgba(0, 0, 0, 0.02), 5px 5px 10px -2px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.07),0 2px 0 0 rgba(0,0,0,0.03);
   height: 30px;
   border-radius: 5px;
   padding: 1rem;
   margin-bottom: 1.5rem;
   transition: 0.2s;
   background-color: white;
+  .card-generic-top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 30px;
+    cursor: pointer;
+  }
   &:hover {
     transform: scale(1.02);
   }
@@ -20,8 +27,9 @@
       display: block;
     }
   }
-  h2 {
-    margin-top: 0px;
+  h3 {
+    margin-bottom: 0;
+    margin-top: 0;
   }
   .card-generic-stars{
     width: 60px;
@@ -35,6 +43,12 @@
       margin-left: 0.5rem;
       width: 30px;
       height: 30px;
+      filter: brightness(0.2) saturate(0);
+      opacity: 0.2;
+      &.active {
+        filter: brightness(1) saturate(1);
+        opacity: 1;
+      }
     }
   }
 }
