--- a/app/views/shared/components/cards/_card_generic.html.erb
+++ b/app/views/shared/components/cards/_card_generic.html.erb
@@ -1,11 +1,10 @@
-<article class="card-generic <%= "card-generic-opened" if repo == 1 %>">
-  <h2>Repo <%= repo %></h2>
-  <div class="card-generic-stars">
-    3 <%= image_tag "pictos/star-solid.svg" %>
+<article class="card-generic <%= "card-generic-opened" if resource == 1 %>">
+  <div class="card-generic-top">
+    <h3><%= resource.name %></h3>
+    <div class="card-generic-stars">
+      <%= resource.stargazers_count %> <%= image_tag "pictos/star-solid.svg", class:"#{"active" if resource.starred? }" %>
+    </div>
   </div>
-  <div class="card-generic-details">
-    <p>
-      Description : Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero amet laboriosam optio, eligendi, deleniti quidem reiciendis iusto voluptatibus. Illo ex nesciunt dolores quasi, aspernatur illum architecto est numquam ad adipisci rem, deserunt nihil hic distinctio tempore.
-    </p>
+  <div class="card-generic-details" id="card-generic-details-<%= resource.id %>">
   </div>
 </article>
