--- a/app/assets/stylesheets/components/cards/card_generic.scss
+++ b/app/assets/stylesheets/components/cards/card_generic.scss
@@ -8,7 +8,7 @@
   margin-bottom: 1.5rem;
   transition: 0.2s;
   background-color: white;
-  transition: 1s;
+  transition: 0.5s;
   h3 {
     margin-bottom: 0;
     margin-top: 0;
@@ -19,9 +19,14 @@
       color: #11627D;
     }
     .card-generic-details {
-      display: block;
+      width: calc(100% - 40px);
+      height: calc(100% - 45px);
+      display: flex;
+      justify-content: space-between;
+      flex-direction: column;
       margin-top: 1rem;
       color: #484848;
+      p { margin: 0; }
     }
   }
   .card-generic-top {
