Add asset_path on logo accolade to Make heroku happy

--- a/app/views/shared/components/_logo.html.erb
+++ b/app/views/shared/components/_logo.html.erb
@@ -3,6 +3,6 @@
     <h1 id="logo" class="kurale blue-dark">
       <span class="orange">é</span>dulib
     </h1>
-    <%= image_tag "logo/logo-accolade" %>
+    <%= image_tag asset_path "logo/logo-accolade" %>
   </div>
 <% end %>
