--- a/app/views/shared/components/cards/_card_generic.html.erb
+++ b/app/views/shared/components/cards/_card_generic.html.erb
@@ -6,5 +6,7 @@
         <%= resource.stargazers_count %> <%= image_tag "pictos/star-solid.svg", class:"#{"active" if resource.starred? }" %>
       </div>
     </div>
+    <div class="card-generic-details-container">
+    </div>
   <% end %>
 </article>
